# anana

./: .gitignore  AGENTS.md  Cargo.toml  README.md  soul.md
.codex/skills/gherkin-bdd/: SKILL.md
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: cli.rs  counterfactual_view.rs  driver.rs  main.rs  terminal.rs
crates/core/: Cargo.toml
crates/core/src/: body.rs  bonds.rs  consciousness.rs  error.rs  gosh.rs  ids.rs  instincts.rs  lib.rs  lineage.rs  log.rs  perception.rs  phenotype.rs  positions.rs  prestige.rs  residence.rs  rng.rs  view.rs  virus.rs  world.rs
crates/core/src/event/: chance.rs  deterministic.rs  event.rs  mod.rs
crates/core/src/genome/: express.rs  gene.rs  genome.rs  mod.rs  recombine.rs
crates/core/src/skills/: learn.rs  memory.rs  mod.rs  skill.rs  social.rs
crates/mind/: Cargo.toml
crates/mind/src/: client.rs  error.rs  lib.rs  offline.rs  types.rs  validation.rs
crates/sim/: Cargo.toml
crates/sim/src/: counterfactual.rs  lib.rs  replay.rs  resources.rs  simulation.rs  validation.rs
crates/sim/src/systems/: advance_clock.rs  aging_health.rs  birth.rs  death.rs  events.rs  learning.rs  logging_and_hash.rs  mating.rs  mod.rs  positions.rs  virus_spread.rs
crates/sim/tests/: bdd.rs  bonds_and_courtship.rs  counterfactual.rs  determinism.rs  perceptual_gains.rs  population.rs  positions.rs  prestige_and_coalitions.rs  replay.rs  social_learning.rs  validation.rs
crates/sim/tests/features/: bonds_and_courtship.feature  counterfactual.feature  determinism.feature  gosh.feature  inheritance.feature  perceptual_gains.feature  population.feature  positions.feature  prestige_and_coalitions.feature  recall.feature  social_learning.feature  time_and_ageing.feature  virus_spread.feature
crates/tui/: Cargo.toml
crates/tui/src/: app_state.rs  input.rs  lib.rs  palette.rs
crates/tui/src/widgets/: feed.rs  inspector.rs  mod.rs  narrative.rs  worldmap.rs
