[workspace]
members = [
    "crates/app",
    "crates/core",
    "crates/mind",
    "crates/sim",
    "crates/tui",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.97"
license = "MIT"

[workspace.dependencies]
anana-core = { path = "crates/core" }
anana-mind = { path = "crates/mind" }
anana-sim = { path = "crates/sim" }
anana-tui = { path = "crates/tui" }
anyhow = "1.0"
bevy = { version = "0.19", default-features = false }
bevy_ecs = "0.19"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
cucumber = "0.23"
insta = "1"
postcard = { version = "1", features = ["alloc"] }
proptest = "1"
rand = "0.9"
rand_chacha = "0.9"
ratatui = "0.29"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Population validation executes thousands of complete ECS ticks. A modestly
# optimized test profile keeps the executable specifications practical.
[profile.test]
opt-level = 2
