[package]
name = "anana-sim"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anana-core = { workspace = true, features = ["ecs"] }
bevy.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
cucumber.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[test]]
name = "bdd"
harness = false
